objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>Utility_Voltage__c</fullName>
        <formula>text( Opportunity__r.Utility_Voltage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Voltage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Holder_and_Contact_Info__c</fullName>
        <label>Warranty Holder and Contact Info:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <formula>text( Opportunity__r.Warranty__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wattage__c</fullName>
        <label>Wattage</label>
        <picklist>
            <picklistValues>
                <fullName>215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>425</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Forms</label>
    <nameField>
        <displayFormat>Form-{0000000000}</displayFormat>
        <label>Forms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>PV_All</fullName>
        <active>true</active>
        <description>PV + All</description>
        <label>PV + All</label>
    </recordTypes>
    <recordTypes>
        <fullName>PV_Inverter</fullName>
        <active>true</active>
        <description>PV + Inverter</description>
        <label>PV + Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>PV_Only</fullName>
        <active>true</active>
        <description>PV Only Form Request</description>
        <label>PV Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Monitoring_Credit_Cannot_Be_Taken</fullName>
        <active>true</active>
        <description>Monitoring Credit Cannot Be Taken if Premium or Plus is selected</description>
        <errorConditionFormula>( DO_NOT_INCLUDE_MONITORING_200_Credit__c = True
&amp;&amp;
( PLUS_PV_Supervisor_Enclosure_Addt_l__c = True  || 
 PREMIUM_PLUS_Weather_Station_cost__c = True))</errorConditionFormula>
        <errorDisplayField>DO_NOT_INCLUDE_MONITORING_200_Credit__c</errorDisplayField>
        <errorMessage>Monitoring Credit Cannot Be Taken if Premium or Plus is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Roof_Slope_Estimated_or_Measure_not_both</fullName>
        <active>true</active>
        <description>Roof Slope Can Only be One, Estimated or Measured</description>
        <errorConditionFormula>(Roof_Slope_Estimated__c = True &amp;&amp;  Roof_Slope_Measured__c = True)</errorConditionFormula>
        <errorDisplayField>Roof_Slope_Estimated__c</errorDisplayField>
        <errorMessage>Roof Slope Can Only be One, Estimated or Measured. Please select only one.</errorMessage>
    </validationRules>
</CustomObject>